--- a/login.html
+++ b/login.html
@@ -52,6 +52,14 @@
                     <input type="text" id="input1" placeholder="">
                     
                 </div>
+                <br>
+                <button onclick="myFunction()">Submit</button>
+
+                    <script>
+                        function myFunction() {
+                        alert("Wrong username or password");
+}
+                    </script>
 
             
             </div>
